Add Test about ng Service of AngularJs

--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,7 @@
               <li class="active"><a href="#!/">Home</a></li>
               <li><a ng-href="#!/about">About</a></li>
               <li><a ng-href="#!/meteo">Meteo</a></li>
+              <li><a ng-href="#!/meteobycity">Meteo By City</a></li>
               <li><a ng-href="#!/">Contact</a></li>
             </ul>
           </div>
@@ -88,6 +89,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/meteo.js"></script>
+        <script src="scripts/controllers/meteobycity.js"></script>
         <!-- endbuild -->
 </body>
 </html>
